# gpr-300-fa2024-Liam-Harrison

./: CMakeLists.txt
assignments/AssignmentworkSession3/: CMakeLists.txt  main.cpp
assignments/AssignmentworkSession3/assets/: heightmap.frag
assignments/AssignmentworkSession4/: CMakeLists.txt  main.cpp
assignments/AssignmentworkSession4/assets/: gradient.frag  heightmap.vert
assignments/assignment0/: main.cpp
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: boxBlur.frag  boxBlur.vert  chrome.frag  chrome.vert  post.frag
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: debug.frag  debug.vert  lit.frag  lit.vert  shadow.vert
assignments/assignment3/: main.cpp
assignments/assignment3/assets/: deferredLit.frag  deferredLit.vert  geometryPass.frag  geometryPass.vert  lightOrb.frag  lightingPass.frag  lightingPassOld.frag  lit.frag
assignments/assignmentworkSession/: CMakeLists.txt  main.cpp
assignments/assignmentworkSession/assets/: lit.frag  water.frag  water.vert
assignments/assignmentworkSession2/: CMakeLists.txt  main.cpp
assignments/assignmentworkSession2/assets/: lit.vert  pbr.frag  pbr.vert
